# Yolo_tracking_vlm_v1

./: README.md
Football-Analytics-IAI-main/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  eda_quick.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_quick.py
Football-Analytics-IAI-main/configs/: inference.yaml
Football-Analytics-IAI-main/configs/data/: players.yaml
Football-Analytics-IAI-main/configs/train/: players_yolov8m.yaml  players_yolov8n.yaml  players_yolov8s.yaml
Football-Analytics-IAI-main/docs/: sportsmot_benchmark.md
Football-Analytics-IAI-main/notebooks/: 01_eda.ipynb
Football-Analytics-IAI-main/reports/: report_template.md
Football-Analytics-IAI-main/scripts/: analyze_training.py  benchmark.py  evaluate.py  evaluate_sportsmot_sequence.py  report_sportsmot_benchmark.py  run_inference.py  run_sportsmot_sequence.py  train_players_yolo.py
Football-Analytics-IAI-main/src/: __init__.py
Football-Analytics-IAI-main/src/core/: __init__.py  base.py  exceptions.py  types.py
Football-Analytics-IAI-main/src/detection/: player_detector.py
Football-Analytics-IAI-main/src/pipeline/: video_processor.py
Football-Analytics-IAI-main/src/tracking/: tracker.py
Football-Analytics-IAI-main/src/utils/: io.py  logging.py  metrics.py  visualization.py
Football-Analytics-IAI-main/tests/: test_types.py  test_visualization.py
