[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-analytics"
version = "0.2.0"
description = "Football analytics with deep learning and computer vision"
requires-python = ">=3.10"
authors = [{name = "Student"}]
license = {text = "MIT"}

dependencies = [
    "ultralytics>=8.2.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "filterpy>=1.4.5",
    "lap>=0.4.0",
    "deep-sort-realtime>=1.3.2",
    "streamlit>=1.30.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
]
tracking = [
    "wandb>=0.16.0",
    "mlflow>=2.8.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RET"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
